--- a/style.css
+++ b/style.css
@@ -290,3 +290,43 @@ font-weight: 500;
 line-height: 24px;
 text-align: left;
 }
+
+.contact-section{
+    background-color: #fff;
+    padding-top: 150px;
+}
+
+.ctc-img{
+ background: #6070FF;
+   
+    border-radius: 15% 0 0 0;
+}
+.ctc-img img{
+    width: 375px;
+    height: 779px;
+    border-radius: 15% 0 0 0;
+}
+
+.ctc-content{
+    margin-top: -700px;
+}
+
+.contact-section h2{
+font-size: 40px;
+font-weight: 700;
+line-height: 52px;
+text-align: center;
+color: #ffff;
+
+}
+
+.contact-section p{
+font-size: 20px;
+font-weight: 300;
+line-height: 28px;
+text-align: center;
+color: #EBEBFF;
+margin-top: 30px;
+margin-right: 40px;
+margin-left: 40px;
+}
