--- a/style.css
+++ b/style.css
@@ -330,3 +330,65 @@ margin-top: 30px;
 margin-right: 40px;
 margin-left: 40px;
 }
+
+form{
+    margin-top: 40px;
+    padding: 50px;
+}
+
+
+.namebox input{
+    width: 250px;
+    height: 30px;
+    padding: 5px;
+    border-radius: 8px;
+    border-color: #6070FF;
+    color: #172B4D;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    }
+
+    .emailbox input{
+        width: 250px;
+        height: 30px;
+        padding: 5px;
+        border-radius: 8px;
+        border-color: #6070FF;
+        color: #172B4D;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 20px;
+        text-align: left;
+        }
+
+        .messagebox input{
+            width: 250px;
+            height: 150px;
+            padding: 5px;
+            border-radius: 8px;
+            border-color: #6070FF;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 24px;
+            text-align: left;
+            color: #B3BAC5;
+            }
+
+        .form-container button{
+            color: #6070FF;
+            background: #ffff;
+            width: 142px;
+            height: 48px;
+            top: 5317px;
+            left: 24px;
+            padding: 12px 16px 12px 16px;
+            border-radius: 8px;
+            opacity: 0px;
+            font-size: 17px;
+            font-weight: 500;
+            line-height: 24px;
+            letter-spacing: 0.03em;
+            text-align: center;
+        }
