--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
-    margin: 0;
-    font-family: poppins,sans-serif;
+    margin: auto;
+    font-family: 'poppins',sans-serif;
 
 }
 
@@ -16,11 +16,15 @@ body{
 
 .header {
     width: 375px;
-    background-color: #fff;
+    background-color: #ffff;
     display: flex;
     height: 48px;
     justify-content: space-between;
     align-items: center;
+}
+
+.menu-icon{
+    margin-right: 20px;
 }
 
 .logo {
